--- a/dos33.html
+++ b/dos33.html
@@ -228,8 +228,8 @@ Solution.2: use div
         height: 1px;
         margin-bottom:-1em
     }
-Solution.3: place <hr> on last line of page, use:
-    margin-bottom: -1.25em;
+Solution.3: place <hr> on the previous line, at the End-of-Line
+    margin-bottom: -1em;
 */
 hr {
     margin: 1px 1px;
